Containerization almost finished (#48)
* update Dockerfile

* bump version

* update

* change spec file location

* implement local Java execution (#27,#30)

* update document and detail of the spec (#9)
