# rest/server/src/diva_server/spec/openapi.yaml
@@ -3,9 +3,9 @@ openapi: 3.0.3
 info:
   title: "Tackle-DiVA (Data-intensive Validity Analyzer)"
   description: "Data-centric application code analysis that import a set of application codes and provides database/transaction analysis results."
-  version: 0.1.0
+  version: 1.0.0rc1
   contact:
-    name: Shin Saito
+    name: Shin Saito (worked on restify of DiVA)
     email: shinsa@jp.ibm.com
   license:
     name: "Eclipse Public License 2.0"
@@ -18,20 +18,17 @@ externalDocs:
 tags:
   - name: General
     description: General operations
-  - name: Application
-    description: Operations on application(s)
+  - name: Analysis
+    description: Code analysis of applications
   - name: Database
-    description: Database information
+    description: Database information of an app
   - name: Transaction
-    description: Transaction information
-
-  - name: "Analysis"
-    description: "Code Analysis"
+    description: Transaction information an app
 
 # to be changed to valid public endpoints
 servers:
-  - url: http://localhost:8080
-  - url: https://localhost:8080
+  - url: /
+    description: Development server
 
 paths:
   /healthz:
@@ -56,7 +53,7 @@ paths:
   /apps:
     post:
       tags:
-        - Application
+        - Analysis
       summary: "Request code analysis for an application"
       description: |-
         Request data-centric code analysis for specified application.
@@ -70,18 +67,24 @@ paths:
           "application/json":
             schema:
               $ref: "#/components/schemas/NewApp"
-            example: {}
+            example:
+              id: day_trader
+              name: Day Trader (WAS)
+              source:
+                github_url: https://github.com/WASdev/sample.daytrader7.git
       responses:
-        "204":
-          description: Analysis is successfully completed and its results are generated.
+        "201":
+          description: Analysis is successfully completed and results are generated.
         "400":
           description: Analysis failed.
   /apps/{id}:
     get:
       tags:
-        - Application
+        - Analysis
       summary: "Query status of application code analysis"
-      description: to be written.
+      description: |-
+        Get an overview and status of the application that was analyzed.
+        The result will be given in JSON format.
       operationId: diva_server.get_app
       parameters:
         - name: id
@@ -90,6 +93,7 @@ paths:
           required: true
           schema:
             type: string
+            example: day_trader
       responses:
         200:
           description: "Successful operation"
@@ -103,9 +107,11 @@ paths:
   /apps/{id}/database:
     get:
       tags:
-        - "Database"
+        - Database
       summary: Get a list of database tables for an app
-      description: to be written.
+      description: |-
+        Get a list of databases of an application that was analyzed before.
+        The result will be given in JSON format.
       operationId: diva_server.get_database
       parameters:
         - name: id
@@ -114,6 +120,7 @@ paths:
           required: true
           schema:
             type: string
+            example: day_trader
       responses:
         200:
           description: "Successful operation"
@@ -129,7 +136,9 @@ paths:
       tags:
         - Transaction
       summary: "Get a list of transactions for an app"
-      description: to be written.
+      description: |-
+        Get a list of transactions of an application that was analyzed before.
+        The result will be given in JSON format.
       operationId: diva_server.get_transaction
       parameters:
         - name: id
@@ -138,6 +147,7 @@ paths:
           required: true
           schema:
             type: string
+            example: day_trader
       responses:
         200:
           description: "Successful operation"
@@ -304,9 +314,14 @@ components:
           default: "available"
       required:
         - id
-        - name
         - source
         - status
+      example:
+        id: day_trader
+        name: Day Trader (WAS)
+        source:
+          github_url: https://github.com/WASdev/sample.daytrader7.git
+        status: available
 
     Database:
       type: "object"
@@ -409,3 +424,4 @@ components:
         github_url:
           type: string
           format: uri
+      example: https://github.com/WASdev/sample.daytrader7.git
